examples/invalid/syntaxErr/if/ifNoelse.wacc
# if missing else clause
# Output:
# #syntax error#

#Program:#

begin
  if true 
  then
    skip
  fi
end
